Fix display on mobile

--- a/client2/src/App.css
+++ b/client2/src/App.css
@@ -1,5 +1,5 @@
 :root {
-  --main-column-min-width: 600px
+  --main-column-min-width: 200px
 }
 
 body {
